@@ -803,6 +803,7 @@ static const uint32 MAX_PP_LANGUAGE		= 28;
 static const uint32 MAX_PP_SPELLBOOK	= 480;	// Increased to 480 to support SoF
 static const uint32 MAX_PP_MEMSPELL		= 9;
 static const uint32 MAX_PP_SKILL		= 75;
+//static const uint32 MAX_PP_SKILL		= 100; // actual buffer size
 static const uint32 MAX_PP_AA_ARRAY		= 240;
 static const uint32 MAX_GROUP_MEMBERS	= 6;
 static const uint32 MAX_RECAST_TYPES	= 20;
@@ -943,6 +944,7 @@ struct PlayerProfile_Struct
 /*4772*/	uint8				unknown4808[24];	// @bp unknown skills?
 /*4796*/	uint32				skills[MAX_PP_SKILL];
 /*5096*/	uint8				unknown5132[284];	// @bp unknown skills?
+///*5196*/	uint8				unknown5132[184];	// @bp unknown skills?
 /*5380*/	uint32				pvp2;				//
 /*5384*/	uint32				unknown5420;		//
 /*5388*/	uint32				pvptype;			//
